termino da secao diretivas

--- a/directives-app/src/app/app.component.html
+++ b/directives-app/src/app/app.component.html
@@ -4,5 +4,11 @@
 <app-ng-if></app-ng-if> 
 <app-ng-for></app-ng-for>
 <app-ng-for-form></app-ng-for-form>
--->
 <app-ng-switch></app-ng-switch>
+<app-ng-template></app-ng-template>
+<app-ng-container></app-ng-container>
+-->
+<app-ng-content>
+    <h2>Wellington Rogério da Silva</h2>
+    <p>Meu nome é Wellington e estou aqui para desenvolver um sistema revolucionário</p>
+</app-ng-content>
